[tool.poetry]
name = "goit-pythonweb-hw-04"
version = "0.1.0"
description = ""
authors = ["Alex Goliansky <a_goliansky@viyar.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aioshutil = "^1.5"
aiopath = "0.6.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
